# libcocoa

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  button_example.c  minimal_window.c  simple_window.c
include/libcocoa/: libcocoa.h
include/libcocoa/appkit/: alert.h  application.h  button.h  menu.h  view.h  window.h
include/libcocoa/common/: objc_utils.h  types.h
src/: CMakeLists.txt
src/appkit/: alert.c  application.c  button.c  menu.c  view.c  window.c
src/common/: objc_utils.c
standalone/: CMakeLists.txt  standalone_window.c
